# growth

./: README.md
session-1/ghost-theme/: LICENSE  README.md  package.json
session-1/ghost-theme/partials/: cover.hbs
session-1/ghost-theme/presentation/: Digital Garden.pptx
session-1/kotlin-app/: CHEATSHEET.md  README.md  todo-unsigned.apk
session-1/kotlin-app/groovetodolist/: settings.gradle
session-1/svelte-kit/: README.md  package-lock.json  package.json
session-1/svelte-kit/src/: app.css  app.html
session-2/: package-lock.json
session-2/Rocket/scripts/: config.sh
session-2/blockchains_smartContracts/: README.md  package.json
session-2/blockchains_smartContracts/solidity/: package-lock.json  package.json
session-2/jokes/: Cargo.toml
session-2/jokes/src/: main.rs
session-2/rust-jokes/: .gitignore  docker-compose.yml  dockerAuth.json  rust.pptx  waypoint.hcl
session-2/rust-jokes/api/: .env.example  .gitignore  Cargo.toml  Dockerfile.prod  Rocket.toml
session-2/rust-jokes/api/ressources/Rocket/contrib/dyn_templates/: Cargo.toml
session-2/rust-jokes/api/ressources/Rocket/contrib/dyn_templates/src/: handlebars_templates.rs  lib.rs  metadata.rs  tera_templates.rs
session-2/rust-jokes/api/ressources/Rocket/examples/databases/: Cargo.toml  Rocket.toml
session-2/rust-jokes/api/ressources/Rocket/examples/databases/src/: diesel_sqlite.rs
session-2/rust-jokes/api/ressources/Rocket/site/tests/: Cargo.toml
session-2/threejs_exploration/: index.html  mirahi-face.gltf  package-lock.json  package.json  server.js
session-2/threejs_exploration/src/: App.js  mirahi-face.dae  mirahi-face.gltf
session-3/amazon-echo-clone/: Presentation.potx  README.md
session-3/amazon-echo-clone/AVS/: config.json
session-3/facial_recognition/: .gitignore  azure-faceReco.py  capture_image.py  email_sender.py  idGenerator.py  johnDoeTest.py  main.py
session-3/ghost-theme/: README.md  gulpfile.js
session-3/ghost-theme/partials/: content.hbs  featured.hbs  footer.hbs  header.hbs
session-3/navigation-ux/my-navigation/: package-lock.json  package.json
session-4/dockside/: dockside_growth.json  dockside_note.txt
session-4/dockside/dockside-auth/: package-lock.json  package.json  server.js
session-4/mirahi-remix/: README.md  mirahi_growth_rebuild_our_website_with_remix.pptx
session-4/solidjs-wordle/: README.md  solidjs-wordle.pptx
session-5/: Presentation.potx
(+260 files in other folders)
