[package]
name = "rocket_dyn_templates"
version = "0.1.0-rc.1"
authors = ["Sergio Benitez <sb@sergio.bz>"]
description = "Dynamic templating engine integration for Rocket."
documentation = "https://api.rocket.rs/v0.5-rc/rocket_dyn_templates/"
homepage = "https://rocket.rs"
repository = "https://github.com/SergioBenitez/Rocket/contrib/dyn_templates"
readme = "README.md"
keywords = ["rocket", "framework", "templates", "templating", "engine"]
license = "MIT OR Apache-2.0"
edition = "2018"

[features]
tera = ["tera_"]
handlebars = ["handlebars_"]

[dependencies]
serde = "1.0"
serde_json = "1.0.26"
glob = "0.3"
notify = "4.0.6"
normpath = "0.3"

[dependencies.rocket]
version = "0.5.0-rc.1"
path = "../../core/lib"
default-features = false

[dependencies.tera_]
package = "tera"
version = "1.10.0"
optional = true

[dependencies.handlebars_]
package = "handlebars"
version = "3.0"
optional = true

[package.metadata.docs.rs]
all-features = true
