[package]
name = "rocket_guide_tests"
version = "0.5.0-rc.1"
workspace = "../../"
edition = "2018"
publish = false

[dependencies]
rocket = { path = "../../core/lib", features = ["secrets"] }

[dev-dependencies]
rocket = { path = "../../core/lib", features = ["secrets", "json"] }
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
figment = { version = "0.10", features = ["toml", "env"] }
time = "0.2"

[dev-dependencies.rocket_dyn_templates]
path = "../../contrib/dyn_templates"
features = ["tera"]

[dev-dependencies.rocket_sync_db_pools]
path = "../../contrib/sync_db_pools/lib"
features = ["diesel_sqlite_pool"]
